--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
     "helmet": "^4.5.0",
-    "mongoose": "^5.12.4"
+    "mongoose": "^5.12.4",
+    "eureka-js-client": "^4.5.0"
   }
 }
