feat: config for docker environment

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ MONGO_CONNECTION_STRING=mongodb://db2.04-nike.tk:27012/
 MONGO_USER=nike_db_2
 MONGO_PASSWORD=nike_db_2
 MONGO_DBNAME=documents
+
+EUREKA_HOST=localhost
+EUREKA_PORT=8761
+SERVICE_NAME=document-service
