--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,7 @@ MONGO_CONNECTION_STRING=mongodb://localhost:27012/
 MONGO_USER=root
 MONGO_PASSWORD=root
 MONGO_DBNAME=documents
+
+EUREKA_HOST=localhost
+EUREKA_PORT=8761
+SERVICE_NAME=document-service
