update for production mode

--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ MONGO_USER=nike_db_2
 MONGO_PASSWORD=nike_db_2
 MONGO_DBNAME=documents
 
-EUREKA_HOST=localhost
+EUREKA_HOST=eureka.04-nike.tk
 EUREKA_PORT=8761
 SERVICE_NAME=document-service
