--- a/.github/workflows/build-auto.yml
+++ b/.github/workflows/build-auto.yml
@@ -6,20 +6,20 @@ on:
       - master
 
 jobs:
-  test:
-    name: 'Run Test'
-    runs-on: ubuntu-latest
+  # test:
+  #   name: 'Run Test'
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js version 12
-      uses: actions/setup-node@v2
-      with:
-        node-version: '12'
-    - name: npm install and test
-      run: |
-        npm install
-        npm test
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Use Node.js version 12
+  #     uses: actions/setup-node@v2
+  #     with:
+  #       node-version: '12'
+  #   - name: npm install and test
+  #     run: |
+  #       npm install
+  #       npm test
   
   build:
     name: 'Build docker image'
