--- a/.github/workflows/build-auto.yml
+++ b/.github/workflows/build-auto.yml
@@ -23,7 +23,7 @@ jobs:
   
   build:
     name: 'Build docker image'
-    needs: [test]
+    # needs: [test]
     runs-on: ubuntu-latest
 
     steps:
