create link upload to s3

--- a/.env
+++ b/.env
@@ -5,6 +5,14 @@ MONGO_USER=nike_db_2
 MONGO_PASSWORD=nike_db_2
 MONGO_DBNAME=documents
 
+us-east-1
 EUREKA_HOST=eureka.04-nike.tk
 EUREKA_PORT=8761
 SERVICE_NAME=document-service
+SERVICE_HOST=http://localhost:3001/
+KAFKA_HOST=139.59.238.217:9092
+
+AWS_REGION=ap-southeast-1
+AWSAccessKeyId=AKIA34BZIJNB62UE5N6I
+AWSSecretKey=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
+AWSBucket=da-cnpm
