--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,15 @@
 PORT=3002
 
-MONGO_CONNECTION_STRING=mongodb://localhost:27012/
-MONGO_USER=root
-MONGO_PASSWORD=root
-MONGO_DBNAME=documents
+MONGO_STRING=mongodb+srv://cxtuan:cxtuan@cluster0.1l7rc.mongodb.net/document?retryWrites=true&w=majority
 
 EUREKA_HOST=localhost
 EUREKA_PORT=8761
 SERVICE_NAME=document-service
+
+SERVICE_HOST=http://localhost:3001/
+KAFKA_HOST=localhost:9092
+
+AWS_REGION=ap-southeast-1
+AWSAccessKeyId=AKIA34BZIJNB62UE5N6I
+AWSSecretKey=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
+AWSBucket=da-cnpm
