--- a/.env.docker
+++ b/.env.docker
@@ -8,3 +8,11 @@ MONGO_DBNAME=documents
 EUREKA_HOST=eureka
 EUREKA_PORT=8761
 SERVICE_NAME=document-service
+
+SERVICE_HOST=http://localhost:3001/
+KAFKA_HOST=139.59.238.217:9092
+
+AWS_REGION=ap-southeast-1
+AWSAccessKeyId=AKIA34BZIJNB62UE5N6I
+AWSSecretKey=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
+AWSBucket=da-cnpm
