--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,9 +2,12 @@ env:
   commonjs: true
   es2021: true
   node: true
+  jest: true
 extends:
   - standard
 parserOptions:
   ecmaVersion: 12
 rules:
   space-before-function-paren: 0
+  no-console: warn
+  camelcase: 0
