--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,39 +1,38 @@
-name: Build Automation
+name: Testing
 
 on:
   push:
     branches:
       - master
 
-jobs:
-  # test:
-  #   name: 'Run Test'
-  #   runs-on: ubuntu-latest
+env:
+  IMAGE_NAME: ${{ secrets.DOCKER_HUB_USERNAME }}/document-service:testing
+  PROJECT_PATH: /opt/04-nike-testing/document-service
 
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: Use Node.js version 12
-  #     uses: actions/setup-node@v2
-  #     with:
-  #       node-version: '12'
-  #   - name: npm install and test
-  #     run: |
-  #       npm install
-  #       npm test
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Git checkout
+      uses: actions/checkout@v2
+
+    - name: setup nodejs
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+
+    - run: npm ci
+    - run: npm run test:remote
   
   build:
     name: 'Build docker image'
-    # needs: [test]
+    needs: [test]
     runs-on: ubuntu-latest
 
     steps:
     - name: Check Out Repo 
       uses: actions/checkout@v2
-
-    - name: Get commit revision
-      id: vars
-      shell: bash
-      run: echo ::set-output name=tag::$(echo $(git describe --long --tags --always)| sed 's/v//')
 
     - name: Login to Docker Hub
       uses: docker/login-action@v1
@@ -52,26 +51,17 @@ jobs:
         context: ./
         file: ./Dockerfile.prod
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/document-service:${{ steps.vars.outputs.tag }}
+        tags: ${{ env.IMAGE_NAME }}
 
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
   
   deploy:
-    name: 'Update server'
+    name: 'Update testing server'
     needs: [build]
     runs-on: ubuntu-latest
     
     steps:
-
-    - name: Check Out Repo 
-      uses: actions/checkout@v2
-
-    - name: Get commit revision
-      id: vars
-      shell: bash
-      run: echo ::set-output name=tag::$(echo $(git describe --long --tags --always)| sed 's/v//')
-
     - name: SSH and deploy in server
       uses: appleboy/ssh-action@master
       with:
@@ -80,6 +70,10 @@ jobs:
         KEY: ${{ secrets.SSH_KEY }}
         PORT: ${{ secrets.SSH_PORT }}
         script: |
-          cd /opt/04-nike/document-service
-          echo IMAGE=${{ secrets.DOCKER_HUB_USERNAME }}/document-service:${{ steps.vars.outputs.tag }} > .env
+          cd ${{ env.PROJECT_PATH }}
+          docker tag ${{ env.IMAGE_NAME }} ${{ env.IMAGE_NAME }}-temp
+          docker rmi ${{ env.IMAGE_NAME }}
+          docker pull ${{ env.IMAGE_NAME }}
+          docker rmi ${{ env.IMAGE_NAME }}-temp
+          echo IMAGE=${{ env.IMAGE_NAME }} > .env
           docker-compose up -d
