--- a/.env.test
+++ b/.env.test
@@ -1,9 +1,9 @@
 PORT=3002
 
-MONGO_CONNECTION_STRING=mongodb://db2.04-nike.tk:27012/
-MONGO_USER=nike_db_2
-MONGO_PASSWORD=nike_db_2
-MONGO_DBNAME=documents
+MONGO_CONNECTION_STRING=mongodb://04-nike.tk:28017/
+MONGO_USER=admin
+MONGO_PASSWORD=admin
+MONGO_DBNAME=document_service
 
 EUREKA_HOST=eureka.04-nike.tk
 EUREKA_PORT=8761
