--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3002
-
+MONGO_STRING=mongodb+srv://cxtuan:cxtuan@cluster0.qzrwv.mongodb.net/document?retryWrites=true&w=majority
 MONGO_CONNECTION_STRING=mongodb://db2.04-nike.tk:27012/
 MONGO_USER=nike_db_2
 MONGO_PASSWORD=nike_db_2
