--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -8,24 +8,24 @@ env:
   PROJECT_PATH: /opt/04-nike/document-service
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+#   test:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: Git checkout
-      uses: actions/checkout@v2
+#     steps:
+#     - name: Git checkout
+#       uses: actions/checkout@v2
 
-    - name: setup nodejs
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+#     - name: setup nodejs
+#       uses: actions/setup-node@v2
+#       with:
+#         node-version: '14'
 
-    - run: npm ci
-    - run: npm run test:remote
+#     - run: npm ci
+#     - run: npm run test:remote
   
   build:
     name: 'Build docker image'
-    needs: [test]
+#     needs: [test]
     runs-on: ubuntu-latest
 
     steps:
